syntax = "proto3";
package theqrl.validator.accounts.v2;

import "proto/zond/ext/options.proto";
import "proto/qrysm/v1alpha1/attestation.proto";
import "proto/qrysm/v1alpha1/beacon_block.proto";
import "proto/qrysm/v1alpha1/beacon_state.proto";
import "proto/qrysm/v1alpha1/sync_committee.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "TheQRL.Validator.Accounts.V2";
option go_package = "github.com/theQRL/qrysm/proto/qrysm/v1alpha1/validator-client;validatorpb";
option java_multiple_files = true;
option java_outer_classname = "KeymanagerProto";
option java_package = "org.theqrl.validator.accounts.v2";
option php_namespace = "TheQRL\\Validator\\Accounts\\V2";

// RemoteSigner service API.
//
// Defines a remote-signing keymanager which manages zond2
// validator accounts and can sign respective messages.
service RemoteSigner {
    // ListPublicKeysResponse managed by a remote signer.
    rpc ListValidatingPublicKeys(google.protobuf.Empty) returns (ListPublicKeysResponse) {
        option (google.api.http) = {
            get: "/accounts/v2/remote/accounts"
        };
    }

    // Sign a remote request via gRPC.
    rpc Sign(SignRequest) returns (SignResponse) {
        option (google.api.http) = {
            post: "/accounts/v2/remote/sign"
        };
    }
}

// ListPublicKeysResponse contains public keys
// for the validator secrets managed by the remote signer.
message ListPublicKeysResponse {
    // List of 2592 byte, Dilithium validating public keys.
    repeated bytes validating_public_keys = 1;
}

// SignRequest is a message type used by a keymanager
// as part of Qrysm's accounts v2 implementation.
message SignRequest {
    // 2592 byte public key corresponding to an associated private key
    // being requested to sign data.
    bytes public_key = 1;

    // Raw bytes signing root the client is requesting to sign. The client is
    // expected to determine these raw bytes from the appropriate Dilithium
    // signing domain as well as the signing root of the data structure
    // the bytes represent.
    bytes signing_root = 2;

    // Signature domain and the beacon chain objects to allow server to verify
    // the contents and to prevent slashing.
    bytes signature_domain = 3;
    // Beacon chain objects. [100-200]
    oneof object {
        theqrl.zond.v1alpha1.AttestationData attestation_data = 101;
        theqrl.zond.v1alpha1.AggregateAttestationAndProof aggregate_attestation_and_proof = 102;
        theqrl.zond.v1alpha1.VoluntaryExit exit = 103;
        uint64 slot = 104 [(theqrl.zond.ext.cast_type) = "github.com/theQRL/qrysm/consensus-types/primitives.Slot"];
        uint64 epoch = 105 [(theqrl.zond.ext.cast_type) = "github.com/theQRL/qrysm/consensus-types/primitives.Epoch"];

        theqrl.zond.v1alpha1.SyncAggregatorSelectionData sync_aggregator_selection_data = 106;
        theqrl.zond.v1alpha1.ContributionAndProof contribution_and_proof = 107;
        bytes sync_message_block_root  = 108;

        theqrl.zond.v1alpha1.ValidatorRegistrationV1 registration = 109;

        theqrl.zond.v1alpha1.BeaconBlockCapella block_capella = 110;
        theqrl.zond.v1alpha1.BlindedBeaconBlockCapella blinded_block_capella = 111;
    }
    uint64 signing_slot = 4 [(theqrl.zond.ext.cast_type) = "github.com/theQRL/qrysm/consensus-types/primitives.Slot"];
}

// SignResponse returned by a RemoteSigner gRPC service.
message SignResponse {
    enum Status {
        UNKNOWN = 0;
        SUCCEEDED = 1;
        DENIED = 2;
        FAILED = 3;
    }

    // Dilithium signature for the data specified in the request.
    bytes signature = 1;

    // Status of the signing response, standardized as an enum
    // to ensure different remote signing servers follow the
    // same conventions.
    Status status = 2;
}

// ProposerOptionPayload is a property of ProposerSettingsPayload
message ProposerOptionPayload {
    string fee_recipient = 1;
    BuilderConfig builder = 2;
}

// BuilderConfig is a property of ProposerOptionPayload
message BuilderConfig {
    bool enabled = 1;
    uint64 gas_limit = 2 [(theqrl.zond.ext.cast_type) = "github.com/theQRL/qrysm/consensus-types/validator.Uint64"];
    repeated string relays = 3;
}

// ProposerSettingsPayload is used to unmarshal files sent from the validator flag as well as safe to bolt db bucket
message ProposerSettingsPayload {
    map<string, ProposerOptionPayload> proposer_config = 1;
    ProposerOptionPayload default_config = 2;
}